# optitrack_pkg

optitrack/: CMakeLists.txt
optitrack/launch/: optitrack.launch.py
optitrack/src/: optitrack_node.cpp
